crates/rome_cli/tests/snapshots/main_commands_check/no_lint_if_files_are_listed_in_ignore_option.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "files": {
    "ignore": ["test1.js"]
  },
  "linter": {
    "enabled": true,
    "ignore": ["test2.js"]
  }
}
```

## `test1.js`

```js

if(a != -0) {}

```

## `test2.js`

```js

if(a != -0) {}

```

# Emitted Messages


