crates/rome_cli/tests/snapshots/main_commands_check/suppress_warnings.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": true,
      "suspicious": {
        "noDebugger": "warn"
      }
    }
  }
}
```

## `file.ts`

```ts
debugger; const a: any = 1;
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks
  


```

# Emitted Messages

```block
file.ts:1:20 lint/suspicious/noExplicitAny ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected any. Specify a different type.
  
  > 1 │ debugger; const a: any = 1;
      │                    ^^^
  
  i any disables many type checking rules. Its use should be avoided.
  

```

```block
The number of diagnostics exceeds the number allowed by Rome.
Diagnostics not shown: 1.
```

```block
Checked 1 file(s) in <TIME>
```


