crates/rome_cli/tests/snapshots/main_commands_check/top_level_all_down_level_not_all.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "rules": {
      "all": true,
      "style": {
        "all": false
      }
    }
  }
}
```

## `fix.js`

```js

    function f() {arguments;}
    const FOO = "FOO";
    var x, y;
    
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks
  


```

# Emitted Messages

```block
fix.js:2:19 lint/correctness/noUndeclaredVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! The arguments variable is undeclared
  
  > 2 │     function f() {arguments;}
      │                   ^^^^^^^^^
    3 │     const FOO = "FOO";
    4 │     var x, y;
  

```

```block
fix.js:2:14 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This function is unused.
  
  > 2 │     function f() {arguments;}
      │              ^
    3 │     const FOO = "FOO";
    4 │     var x, y;
  
  i Unused variables usually are result of incomplete refactoring, typos and other source of bugs.
  

```

```block
fix.js:3:11 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable is unused.
  
    2 │     function f() {arguments;}
  > 3 │     const FOO = "FOO";
      │           ^^^
    4 │     var x, y;
    5 │     
  
  i Unused variables usually are result of incomplete refactoring, typos and other source of bugs.
  
  i Suggested fix: If this is intentional, prepend FOO with an underscore.
  
    1 1 │   
    2 2 │       function f() {arguments;}
    3   │ - ····const·FOO·=·"FOO";
      3 │ + ····const·_FOO·=·"FOO";
    4 4 │       var x, y;
    5 5 │       
  

```

```block
fix.js:4:9 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable is unused.
  
    2 │     function f() {arguments;}
    3 │     const FOO = "FOO";
  > 4 │     var x, y;
      │         ^
    5 │     
  
  i Unused variables usually are result of incomplete refactoring, typos and other source of bugs.
  
  i Suggested fix: If this is intentional, prepend x with an underscore.
  
    2 2 │       function f() {arguments;}
    3 3 │       const FOO = "FOO";
    4   │ - ····var·x,·y;
      4 │ + ····var·_x,·y;
    5 5 │       
  

```

```block
fix.js:4:12 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable is unused.
  
    2 │     function f() {arguments;}
    3 │     const FOO = "FOO";
  > 4 │     var x, y;
      │            ^
    5 │     
  
  i Unused variables usually are result of incomplete refactoring, typos and other source of bugs.
  
  i Suggested fix: If this is intentional, prepend y with an underscore.
  
    2 2 │       function f() {arguments;}
    3 3 │       const FOO = "FOO";
    4   │ - ····var·x,·y;
      4 │ + ····var·x,·_y;
    5 5 │       
  

```

```block
fix.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Formatter would have printed the following content:
  
    1   │ - 
    2   │ - ····function·f()·{arguments;}
    3   │ - ····const·FOO·=·"FOO";
    4   │ - ····var·x,·y;
    5   │ - ····
      1 │ + function·f()·{
      2 │ + → arguments;
      3 │ + }
      4 │ + const·FOO·=·"FOO";
      5 │ + var·x,·y;
      6 │ + 
  

```

```block
fix.js internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Fixes applied to the file, but there are still diagnostics to address.
  

```

```block
Checked 1 file(s) in <TIME>
```


