crates/rome_cli/tests/snapshots/main_commands_check/unsupported_file.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `check.txt`

```txt
for(;true;);

```

# Termination Message

```block
no files were processed in the specified paths.
```

# Emitted Messages

```block
Checked 0 file(s) in <TIME>
```


